// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioToggle expect to render children on selected 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <RadioToggle
    initial="selected-only"
    scope="my-app-1"
    selectable={true}
  >
    Something
  </RadioToggle>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <Radio
          className=""
          defaultChecked={false}
          id="my-app-1-radio-all"
          isChecked={null}
          isDisabled={false}
          isValid={true}
          label="All event types"
          name="my-app-1-event-type-radio"
          onChange={[Function]}
          style={
            Object {
              "marginBottom": ".5em",
              "marginTop": ".5em",
            }
          }
          value="all"
        />,
        <Radio
          className=""
          defaultChecked={true}
          id="my-app-1-radio-selected"
          isChecked={null}
          isDisabled={false}
          isValid={true}
          label="Only selected event types"
          name="my-app-1-event-type-radio"
          onChange={[Function]}
          style={
            Object {
              "marginBottom": "1em",
              "marginTop": ".5em",
            }
          }
          value="selected-only"
        />,
        "Something",
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "className": "",
          "defaultChecked": false,
          "id": "my-app-1-radio-all",
          "isChecked": null,
          "isDisabled": false,
          "isValid": true,
          "label": "All event types",
          "name": "my-app-1-event-type-radio",
          "onChange": [Function],
          "style": Object {
            "marginBottom": ".5em",
            "marginTop": ".5em",
          },
          "value": "all",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "className": "",
          "defaultChecked": true,
          "id": "my-app-1-radio-selected",
          "isChecked": null,
          "isDisabled": false,
          "isValid": true,
          "label": "Only selected event types",
          "name": "my-app-1-event-type-radio",
          "onChange": [Function],
          "style": Object {
            "marginBottom": "1em",
            "marginTop": ".5em",
          },
          "value": "selected-only",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "Something",
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <Radio
            className=""
            defaultChecked={false}
            id="my-app-1-radio-all"
            isChecked={null}
            isDisabled={false}
            isValid={true}
            label="All event types"
            name="my-app-1-event-type-radio"
            onChange={[Function]}
            style={
              Object {
                "marginBottom": ".5em",
                "marginTop": ".5em",
              }
            }
            value="all"
          />,
          <Radio
            className=""
            defaultChecked={true}
            id="my-app-1-radio-selected"
            isChecked={null}
            isDisabled={false}
            isValid={true}
            label="Only selected event types"
            name="my-app-1-event-type-radio"
            onChange={[Function]}
            style={
              Object {
                "marginBottom": "1em",
                "marginTop": ".5em",
              }
            }
            value="selected-only"
          />,
          "Something",
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "className": "",
            "defaultChecked": false,
            "id": "my-app-1-radio-all",
            "isChecked": null,
            "isDisabled": false,
            "isValid": true,
            "label": "All event types",
            "name": "my-app-1-event-type-radio",
            "onChange": [Function],
            "style": Object {
              "marginBottom": ".5em",
              "marginTop": ".5em",
            },
            "value": "all",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "className": "",
            "defaultChecked": true,
            "id": "my-app-1-radio-selected",
            "isChecked": null,
            "isDisabled": false,
            "isValid": true,
            "label": "Only selected event types",
            "name": "my-app-1-event-type-radio",
            "onChange": [Function],
            "style": Object {
              "marginBottom": "1em",
              "marginTop": ".5em",
            },
            "value": "selected-only",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "Something",
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`RadioToggle expect to render just the radios on all 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <RadioToggle
    initial="all"
    scope="my-app-1"
    selectable={true}
  >
    Something
  </RadioToggle>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <Radio
          className=""
          defaultChecked={true}
          id="my-app-1-radio-all"
          isChecked={null}
          isDisabled={false}
          isValid={true}
          label="All event types"
          name="my-app-1-event-type-radio"
          onChange={[Function]}
          style={
            Object {
              "marginBottom": ".5em",
              "marginTop": ".5em",
            }
          }
          value="all"
        />,
        <Radio
          className=""
          defaultChecked={false}
          id="my-app-1-radio-selected"
          isChecked={null}
          isDisabled={false}
          isValid={true}
          label="Only selected event types"
          name="my-app-1-event-type-radio"
          onChange={[Function]}
          style={
            Object {
              "marginBottom": "1em",
              "marginTop": ".5em",
            }
          }
          value="selected-only"
        />,
        false,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "className": "",
          "defaultChecked": true,
          "id": "my-app-1-radio-all",
          "isChecked": null,
          "isDisabled": false,
          "isValid": true,
          "label": "All event types",
          "name": "my-app-1-event-type-radio",
          "onChange": [Function],
          "style": Object {
            "marginBottom": ".5em",
            "marginTop": ".5em",
          },
          "value": "all",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "className": "",
          "defaultChecked": false,
          "id": "my-app-1-radio-selected",
          "isChecked": null,
          "isDisabled": false,
          "isValid": true,
          "label": "Only selected event types",
          "name": "my-app-1-event-type-radio",
          "onChange": [Function],
          "style": Object {
            "marginBottom": "1em",
            "marginTop": ".5em",
          },
          "value": "selected-only",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      false,
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <Radio
            className=""
            defaultChecked={true}
            id="my-app-1-radio-all"
            isChecked={null}
            isDisabled={false}
            isValid={true}
            label="All event types"
            name="my-app-1-event-type-radio"
            onChange={[Function]}
            style={
              Object {
                "marginBottom": ".5em",
                "marginTop": ".5em",
              }
            }
            value="all"
          />,
          <Radio
            className=""
            defaultChecked={false}
            id="my-app-1-radio-selected"
            isChecked={null}
            isDisabled={false}
            isValid={true}
            label="Only selected event types"
            name="my-app-1-event-type-radio"
            onChange={[Function]}
            style={
              Object {
                "marginBottom": "1em",
                "marginTop": ".5em",
              }
            }
            value="selected-only"
          />,
          false,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "className": "",
            "defaultChecked": true,
            "id": "my-app-1-radio-all",
            "isChecked": null,
            "isDisabled": false,
            "isValid": true,
            "label": "All event types",
            "name": "my-app-1-event-type-radio",
            "onChange": [Function],
            "style": Object {
              "marginBottom": ".5em",
              "marginTop": ".5em",
            },
            "value": "all",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "className": "",
            "defaultChecked": false,
            "id": "my-app-1-radio-selected",
            "isChecked": null,
            "isDisabled": false,
            "isValid": true,
            "label": "Only selected event types",
            "name": "my-app-1-event-type-radio",
            "onChange": [Function],
            "style": Object {
              "marginBottom": "1em",
              "marginTop": ".5em",
            },
            "value": "selected-only",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        false,
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`RadioToggle expect to render only one radio if not selectable 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <RadioToggle
    initial="selected-only"
    scope="my-app-1"
    selectable={false}
  >
    Something
  </RadioToggle>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <Radio
          className=""
          defaultChecked={true}
          id="my-app-1-radio-all"
          isChecked={null}
          isDisabled={false}
          isValid={true}
          label="All event types"
          name="my-app-1-event-type-radio"
          onChange={[Function]}
          style={
            Object {
              "marginBottom": ".5em",
              "marginTop": ".5em",
            }
          }
          value="all"
        />,
        false,
        false,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "className": "",
          "defaultChecked": true,
          "id": "my-app-1-radio-all",
          "isChecked": null,
          "isDisabled": false,
          "isValid": true,
          "label": "All event types",
          "name": "my-app-1-event-type-radio",
          "onChange": [Function],
          "style": Object {
            "marginBottom": ".5em",
            "marginTop": ".5em",
          },
          "value": "all",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      false,
      false,
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <Radio
            className=""
            defaultChecked={true}
            id="my-app-1-radio-all"
            isChecked={null}
            isDisabled={false}
            isValid={true}
            label="All event types"
            name="my-app-1-event-type-radio"
            onChange={[Function]}
            style={
              Object {
                "marginBottom": ".5em",
                "marginTop": ".5em",
              }
            }
            value="all"
          />,
          false,
          false,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "className": "",
            "defaultChecked": true,
            "id": "my-app-1-radio-all",
            "isChecked": null,
            "isDisabled": false,
            "isValid": true,
            "label": "All event types",
            "name": "my-app-1-event-type-radio",
            "onChange": [Function],
            "style": Object {
              "marginBottom": ".5em",
              "marginTop": ".5em",
            },
            "value": "all",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        false,
        false,
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
